2006-01-19	Mike Bourgeous		<i_am_nitrogen at hotmail.com>

	* Added a set cursor position ioctl.
	* Removed some more debug printk's.

2006-01-17	Mike Bourgeous		<i_am_nitrogen at hotmail.com>

	* Cleaned some code.
	* Removed some old/temporary functions.
	* Fixed potential infinite loop in find_tl880* functions in tl880util.
	* Changed some function names from *_tl880 to tl880_*.
	* Changed tuner set type code to only set PHILIPS_ATSC for MyHD cards.
	* Removed many unnecessary printk's.

2005-12-10	Mike Bourgeous		<i_am_nitrogen at hotmail.com>

	* Removed obsolete tlaudio/ and tltuner/ directories in driver/.
	* Changed TUNER_SET_TYPE to TUNER_SET_TYPE_ADDR for new tuner API.

2005-11-18	Mike Bourgeous		<i_am_nitrogen at hotmail.com>

	* Added tl880_{mk,rm}dev scripts to driver/

2005-11-16	Mike Bourgeous		<i_am_nitrogen at hotmail.com>

	* Consolidated the mmap functions and device file operations info.

2005-11-15	Mike Bourgeous		<i_am_nitrogen at hotmail.com>

	* Fixed minor number calculation for character devices - this was
	  preventing all tl880 /dev functions from working.
	* Added name field to tl880_dev.
	* Minor code cleaning.
	* Added /proc entry.
	* Renamed board_type to card_type in tl880_dev.
	* Fixed freeing of irq (use pcidev->irq instead of tl880dev->irq for
	  safety - also make sure tl880dev->irq = pcidev->irq).
	* Fixed /dev accesses - file->private_data is unavailable in cdev, so
	  we use file->f_dentry->inode to get the minor number and FUNC_MASK
	  to identify the mmap/ioctl needed.

2005-11-14	Mike Bourgeous		<i_am_nitrogen at hotmail.com>

	* Changed workqueue stuff to use tasklets.
	* Other 2.6 compile/run fixes.
	* Added request_module call for i2c-dev.
	* Changed tl880i2c.c to bind with new i2c drivers (I2C_CLASS_*).
	* Clean up some old 2.4-specific code.

2005-11-08	Mike Bourgeous		<i_am_nitrogen at hotmail.com>
	
	* Modified driver/Makefile for kernel 2.6.
	* Updated driver code to compile on kernel 2.6.