@@ -1,3 +1,8 @@
+2006-01-21	Mike Bourgeous		<i_am_nitrogen at hotmail.com>
+
+	* Added OSD register randomization tool.
+	* Added memory dump tool.
+
 2006-01-19	Mike Bourgeous		<i_am_nitrogen at hotmail.com>
 
 	* Added a set cursor position ioctl.
